fix(console): handle multiple users with the same email when sending email invitations
(cherry picked from commit 1ed8793b429d831201d5b895488451f6379d115f)